--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["es2016"], //源码的运行环境 node环境需要下载@types/node
     "outDir": "./dist", //指定输出文件目录
     "strictNullChecks": true,  //更严格的空类型检查
+    "esModuleInterop": true, // 适用es6的标准和非es6标准导入导出
   },
   "include": ["./src"] //需要编译的源文件的路径
 }
