--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon --watch src -e ts --exec ts-node src/index.ts"
+    "dev":"nodemon --watch src -e ts --exec ts-node src/class.ts"
   },
   "author": "",
   "license": "ISC",
